crates/cosmon-cli/tests/snapshots/help__done.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Done — terminal teardown for a molecule (merge + cleanup, human-callable)

A failed merge reports the merge error and any dirty checkout paths. `[project] merge_subject` may set the merge commit subject per galaxy; its template must include `{mol_id}`. Unset, the subject is unchanged. Tracked harvest state, including archive and event files, is committed before the next sibling merge; ignored molecule directories are skipped.

Usage: cs done [OPTIONS] <MOLECULE>

Arguments:
  <MOLECULE>
          Molecule ID to tear down

Options:
      --config <PATH>
          Path to the state directory (default: the galaxy's .cosmon/state/)

      --reason <REASON>
          Why this molecule is being closed. Traced trunk-side on the molecule.
          
          Optional here and **mandatory over the wire** (`POST /v1/molecules/{id}/done`), and the asymmetry is deliberate. An operator standing at their own terminal is the author of the git history this harvest writes; a requester reaching the door over §8p is not, and the trunk-side reason is the only account a later reader has of why someone else's molecule was closed. Making it mandatory here too would break every hook, patrol sweep and `cs run` teardown that legitimately closes a molecule without a sentence to add — a usability amputation with no safety property behind it.
          
          What is *not* optional anywhere is honesty: when no reason is given, none is recorded. The withdrawn `land` gesture fabricated a generic one, and a fabricated reason is indistinguishable, a year later, from one somebody meant.

      --force
          Proceed even if the molecule is not in a terminal state

  -v, --verbose
          Enable verbose output

      --if-completed
          Silent no-op when the molecule is not `Completed` or already merged.
          
          Hook-friendly gate for callers that do not know whether the molecule is ready for teardown — tmux `pane-died` hooks, patrol sweeps, and the legacy `cs harvest` alias. Exits success without touching state when the precondition is not met; otherwise, behaves exactly like `cs done`. Supersedes the stand-alone `cs harvest` verb (ADR-052).

      --json
          Output in JSON format

      --dry-run
          Compute and display the teardown plan without executing any steps.
          
          Reports what `cs done` *would* do: worktree state (clean/dirty), whether a merge is needed, whether the tmux session is alive, whether a fleet worker is registered, and whether the branch exists.

      --no-merge
          Skip merging the worker's branch into the base branch

      --review-shell
          Review a merge's changed shell surface and grant trust over the merged files before the post-merge gate. Requires an explicit operator reply; declining rolls the merge back and preserves the branch

      --no-worktree-remove
          Skip removing the git worktree

      --no-branch-delete
          Skip deleting the worker's branch after merge

      --no-kill
          Skip killing the tmux session

      --strategy <STRATEGY>
          Merge strategy for the worker's branch.
          
          `merge` (default) creates a merge commit (`git merge --no-ff`) so parallel workers can land independently even when main has moved. `ff-only` preserves a strictly linear history and refuses anything that is not a fast-forward; it is refused when native attribution is configured because a fast-forward creates no trailer carrier.

          Possible values:
          - merge:   Non-fast-forward merge (`git merge --no-ff --no-edit`)
          - ff-only: Fast-forward-only merge (`git merge --ff-only`)
          
          [default: merge]

      --no-auto-propel
          Disable auto-propel escalation on merge conflict.
          
          By default, when a merge conflict is detected, `cs done` escalates by sending a resume signal to the worker with rebase instructions, then retries the merge after a backoff delay. This flag restores the old behavior: abort immediately and print a manual-resolution message.
          
          Mechanical-first escalation: see docs/architectural-invariants.md

      --propel-message <PROPEL_MESSAGE>
          Custom message sent to the worker during auto-propel escalation.
          
          The default instructs the worker to rebase onto the base branch, resolve conflicts, run tests, and NOT call `cs done` itself.

      --max-retries <MAX_RETRIES>
          Maximum number of auto-propel escalation retries before giving up
          
          [default: 3]

      --skip-pre-done-hook
          Skip the blocking `[hooks] pre_done` gate for this invocation.
          
          The `pre_done` hook (when configured) runs before the merge and *aborts* teardown on a non-zero exit — the galaxy-owned Definition-of- Done gate. This flag is the human operator's kill-switch: it bypasses the gate entirely for a deliverable the operator knows is good but the script cannot see (e.g. evidence living outside the repo). Equivalent to setting the `COSMON_SKIP_PRE_DONE_HOOK` environment variable. No effect when no `pre_done` hook is configured.

      --deploy-off-trunk
          Run the `[hooks] post_merge` deploy hook even when this harvest merges into a parked work branch rather than the reference trunk.
          
          By default the `post_merge` hook is **bounded to the trunk**: it fires only when the resolved integration base is the galaxy's reference trunk (`origin/HEAD`, or `main` as a last resort). The hook *deploys* — the canonical `just install` refreshes the on-disk `cs` binary — so running it after a merge into an *older* parked branch would silently rejuvenate the operator's tool, dropping whatever the parked branch predates (task-20260725-b64f). When the merge targets a parked branch the hook is skipped with a warning naming the reason.
          
          This flag is the operator's explicit escape hatch for the rare-but- legitimate case of deploying from a parked branch on purpose. No effect when no `post_merge` hook is configured or when the merge already targets the trunk.

      --allow-protected-change
          Merge even though the worker branch changed a path the molecule declared protected (`cs nucleate --protect`, issue #94).
          
          Without it, `cs done` refuses such a branch (`protected_path_modified`, exit 78) and names each protected path it changed. Protected paths are reference inputs; a branch that rewrites them can make any result "match". Pass this flag only when you, the operator, have read the change and it is intended — for example a reference dataset that was itself wrong. No effect on a molecule that declared no protected path.

  -h, --help
          Print help (see a summary with '-h')

EXAMPLES:
  cs done task-example-0001                      # merge + teardown
  cs done <mol> --strategy ff-only                # linear history; attribution off
  cs done <mol> --force                           # skip completion check
  cs done <mol> --if-completed                    # silent no-op if not Completed

Not-the-worker. Legitimate callers: humans, external schedulers
(cron/launchd), and transport watchdogs (tmux pane-died hooks via
`cs done --if-completed`). Required to close the nucleate → tackle →
wait → done cycle: without it the branch never merges and the tmux
worktree persists.

`--if-completed` is the hook-friendly gate: exits success without
touching state when the molecule is not `Completed` or already merged;
behaves identically to plain `cs done` otherwise. Supersedes the
former `cs harvest` verb (ADR-052 §D3).

BASE BRANCH — the branch this merge lands on is resolved once per run,
in this order (first that answers wins):

  1. the molecule's own base, stamped by `cs tackle --base <branch>`
  2. the COSMON_BASE_BRANCH environment variable
  3. `git symbolic-ref refs/remotes/origin/HEAD`
  4. the literal main

Rung 1 is why a `cs done` fired from a tmux hook — whose environment
froze when the tmux server started and never saw a later `export` —
still merges onto the right trunk. Molecules tackled without `--base`
resolve through rungs 2-4 exactly as they always did. `cs done` still
refuses (NotOnBase) when HEAD is not the resolved base: git merges into
the current HEAD, never into a branch by name.

SEE ALSO: cs complete (state transition only), cs tackle (counterpart).
