crates/cosmon-cli/tests/snapshots/help__ensemble.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Display ensemble status — observe the fleet at a glance

Usage: cs ensemble [OPTIONS]

Options:
      --all
          Show molecules from all projects, not just the current one

      --config <PATH>
          Path to the state directory (default: the galaxy's .cosmon/state/)

      --cluster
          Walk every `.cosmon/`-bearing galaxy under `$COSMON_CLUSTER_ROOT` (default `$HOME/galaxies`) and print one aggregated table.
          
          This is the cross-galaxy extension of `--all`. Where `--all` drops the project-id filter within the current state dir, `--cluster` visits every sibling galaxy on disk and prints their workers + molecule counts. Works in tandem with `--all` (implicitly drops the project filter because the scope is now the whole cluster).
          
          Also prints one host reading — memory, swap, the kernel's own pressure level, CPUs and load, with units — and the machine-wide totals derived from the galaxies scanned, including harvests holding a galaxy's trunk lock (a `cs done` in its post-merge gate phase has no live worker). Observations only: no threshold is applied and nothing is refused. A counter that could not be read prints `unavailable`, never `0`; if the host cannot be read at all the galaxy view still renders and the reason goes to stderr.
          
          [aliases: --cluster]

  -v, --verbose
          Enable verbose output

      --cluster-root <DIR>
          Override the cluster root directory when `--cluster` is set. Defaults to `$COSMON_CLUSTER_ROOT` env var, then `$HOME/galaxies`

      --json
          Output in JSON format

      --tag <GLOB>
          Filter molecules by tag glob pattern (repeatable, any-match).
          
          Patterns support `*` as wildcard. Example: `--tag deferred:*`. Molecules without a matching tag are excluded from the molecule summary counts.

  -h, --help
          Print help (see a summary with '-h')

EXAMPLES:
  cs ensemble                      # all molecules, all fleets
  cs ensemble --tag temp:hot       # actionable backlog snapshot
  cs ensemble --fleet research     # one fleet only
  cs ensemble --json               # NDJSON for scripting
