crates/cosmon-cli/tests/snapshots/help__fleet.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Fleet template discovery and initialization

Usage: cs fleet [OPTIONS] <COMMAND>

Commands:
  list-templates  List available fleet templates
  init            Initialize a fleet from a template (copies to .cosmon/fleet.toml)
  resolve         Resolve a fleet.toml (follow `[[fleet.include]]`) and print the flattened fleet

Options:
      --config <PATH>  Path to the state directory (default: the galaxy's .cosmon/state/)
  -v, --verbose        Enable verbose output
      --json           Output in JSON format
  -h, --help           Print help

EXAMPLES:
  cs fleet list-templates     # installed templates
  cs fleet init research      # scaffold a .fleet.toml from a template
  cs fleet resolve            # flatten a composable fleet.toml (ADR-038)
  cs fleet resolve --json     # NDJSON for scripting

SEE ALSO: cs deploy (instantiate a fleet from the .fleet.toml).
