crates/cosmon-cli/tests/snapshots/help__fleet_init.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Initialize a fleet from a template (copies to .cosmon/fleet.toml)

Usage: cs fleet init [OPTIONS] <TEMPLATE>

Arguments:
  <TEMPLATE>  Template name (from `cs fleet list-templates`)

Options:
      --config <PATH>  Path to the state directory (default: the galaxy's .cosmon/state/)
  -o, --output <PATH>  Output path (default: .cosmon/fleet.toml)
  -v, --verbose        Enable verbose output
      --json           Output in JSON format
  -h, --help           Print help
