crates/cosmon-cli/tests/snapshots/help__fleet_list_templates.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
List available fleet templates

Usage: cs fleet list-templates [OPTIONS]

Options:
      --config <PATH>  Path to the state directory (default: the galaxy's .cosmon/state/)
  -v, --verbose        Enable verbose output
      --json           Output in JSON format
  -h, --help           Print help
