crates/cosmon-cli/tests/snapshots/help__fleet_resolve.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Resolve a fleet.toml (follow `[[fleet.include]]`) and print the flattened fleet

Usage: cs fleet resolve [OPTIONS] [PATH]

Arguments:
  [PATH]  Path to the master fleet.toml (default: .cosmon/fleet.toml via walk-up)

Options:
      --config <PATH>  Path to the state directory (default: the galaxy's .cosmon/state/)
  -v, --verbose        Enable verbose output
      --json           Output in JSON format
  -h, --help           Print help
