crates/cosmon-cli/tests/snapshots/help__galaxies_list.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
List every galaxy grouped by its `galaxy_kind` family

Usage: cs galaxies list [OPTIONS]

Options:
      --config <PATH>  Path to the state directory (default: the galaxy's .cosmon/state/)
  -v, --verbose        Enable verbose output
      --json           Output in JSON format
  -h, --help           Print help
